--- a/src/app/dashboard/create/search/search.component.html
+++ b/src/app/dashboard/create/search/search.component.html
@@ -1,11 +1,11 @@
 
 
-<mat-label>Creador</mat-label>
-<div fxLayout="row" fxLayout.gt-lgng ="column" fxLayoutGap="16px">
+<mat-label>Filtro</mat-label>
+<div fxLayout="row" fxLayout.gt-lgng ="column" fxLayoutGap="8px">
 <mat-select (selectionChange)="applyFilter( $event.value )" >
-<mat-option value="RASMUS LERDOF" >RASMUS LERDOF</mat-option>
-<mat-option value="JAMES GOSLING">JAMES GOSLING</mat-option>
-<mat-option value="GUIDO VAN ROSSUM">GUIDO VAN ROSSUM</mat-option>
+<mat-option value="" >""</mat-option>
+<mat-option value="">""""</mat-option>
+<mat-option value="">""""</mat-option>
 
 </mat-select>
 </div>
