--- a/src/app/dashboard/create/listperson/listperson.component.html
+++ b/src/app/dashboard/create/listperson/listperson.component.html
@@ -1,47 +1,63 @@
-<mat-card>
-  <app-search></app-search>
-</mat-card>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table">
+<div fxLayout fxLayoutAlign="center center" >
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="userCode">
-      <th mat-header-cell *matHeaderCellDef> NRO DOC</th>
-      <td mat-cell *ngFor="let element"> {{element.userCode}} </td>
-    </ng-container>
+  <mat-form-field fxFlex="40%" >
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="nombre_Completo">
-      <th mat-header-cell *matHeaderCellDef> NOMBRE </th>
-      <td mat-cell *ngFor="let element"> {{element.nombre_Completo}} </td>
-    </ng-container>
+    <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Buscar"  #input >
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="cargo">
-      <th mat-header-cell *matHeaderCellDef> CARGO </th>
-      <td mat-cell *ngFor="let element"> {{element.cargo}} </td>
-    </ng-container>
+  </mat-form-field><mat-icon>search</mat-icon>
 
+  <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../createperson"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
+
+
+</div>
+
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="numeroDocumento">
+    <th mat-header-cell *matHeaderCellDef> Codigo </th>
+    <td mat-cell *matCellDef="let element"> {{element.numeroDocumento}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="nombreCompleto">
+    <th mat-header-cell *matHeaderCellDef> Nombre Completo </th>
+    <td mat-cell *matCellDef="let element"> {{element.nombreCompleto}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="cargo">
+    <th mat-header-cell *matHeaderCellDef> Cargo </th>
+    <td mat-cell *matCellDef="let element"> {{element.cargo.nombre}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="unidadOrganizacional">
+    <th mat-header-cell *matHeaderCellDef> Unidad Organizacional</th>
+    <td mat-cell *matCellDef="let element"> {{element.unidadOrganizacional.nombre}} </td>
+  </ng-container>
     <!-- Symbol Column -->
-    <ng-container matColumnDef="unidadOrganizacional">
-      <th mat-header-cell *matHeaderCellDef>UNIDAD ORG</th>
-      <td mat-cell *ngFor="let element"> {{element.unidadOrganizacional}} </td>
+     <ng-container matColumnDef="gerencia">
+      <th mat-header-cell *matHeaderCellDef> Gerencia </th>
+      <td mat-cell *matCellDef="let element"> {{element.gerencia.nombre}} </td>
     </ng-container>
-    <ng-container matColumnDef="gerencia">
-      <th mat-header-cell *matHeaderCellDef> GERENCIA </th>
-      <td mat-cell *ngFor="let element"> {{element.gerencia}} </td>
-    </ng-container>
-
     <ng-container matColumnDef="Acciones">
-      <th mat-header-cell *matHeaderCellDef> Acciones </th>
-       <td mat-cell *ngFor="let element">
-        <button  mat-raised-button color="primary">
-          <b>Editar</b>
-        </button>
+      <th mat-header-cell *matHeaderCellDef>Editar</th>
+      <td mat-cell *matCellDef="let element">
+        <a (click) = "upgradeUsuario(element)"  color="primary"><!---->
+          <mat-icon color="warn">border_color</mat-icon>
+        </a>
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
 
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  <!-- fila que se muestra cuando no hay datos -->
+   <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro "{{input.value}}"</td>
+  </tr>
+</table>
