--- a/src/app/dashboard/modify/modifyperson/modifyperson.component.scss
+++ b/src/app/dashboard/modify/modifyperson/modifyperson.component.scss
@@ -1,3 +1,47 @@
 .example-card {
   max-width: 20px;
 }
+button.mat-button .mat-icon,
+a.mat-button .mat-icon,
+a.mat-raised-button .mat-icon,
+a.mat-flat-button .mat-icon,
+a.mat-stroked-button .mat-icon {
+  vertical-align: top;
+  font-size: 1.25em;
+}
+.btn{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-row{
+  font-size: 10px
+}
+.btn1{
+  font-family: helvetica;
+
+  font-size: 10px;
+  font-style: italic;
+
+
+  border-radius: 15px;
+
+}
+.btn1:hover{
+  background-color: gold;
+}
+.btn2{
+  background-color: #FFC300 ;
+  text-align: center;
+  font-family: helvetica;
+
+  font-size: 10px;
+  font-style: italic;
+  color: white;
+
+}
+.btn2:hover{
+  background-color: greenyellow;
+}
