--- a/src/app/dashboard/shareddash/footerdash/footerdash.component.html
+++ b/src/app/dashboard/shareddash/footerdash/footerdash.component.html
@@ -2,12 +2,21 @@
     <div class="footer-copyright">
         <div class="container">
             <div class="row">
-                    <div class="col-md-12">
-                        <p class="text-muted" > ADIS - Help System by Sofia &nbsp; || &nbsp;
+                    <!-- <div class="col-md-12">
+                         <p class="text-muted" > ADIS - Help System by Sofia &nbsp; || &nbsp;
                             Copyright ©
                             <script>document.write(new Date().getFullYear());</script> All rights reserved.
-                        </p>
-                    </div>
+                        </p> 
+
+                        
+                    </div> -->
+                    <div class="col-md-12">
+                      <p  class="text-muted">ADIS - Help System by Sofia
+                      &copy;
+                      {{test | date: 'yyyy'}}, 
+                      <a href="https://www.sofia.com" target="_blank">Adis Sofia</a> 
+                    </p>
+                  </div>
             </div>
         </div>
     </div>
