--- a/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
+++ b/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
@@ -4,20 +4,23 @@
     </div>
     <mat-divider></mat-divider>
     <h2 matSubheader class="mt-2">APPLICATIONS</h2>
-
     <a mat-list-item routerLinkActive="listperson" routerLink="listperson">
-      <mat-icon>dashboard</mat-icon> Dashboard
+      <mat-icon>account_circle</mat-icon> PERSONAS
     </a>
+    <a mat-list-item routerLinkActive="listperson" routerLink="listusers">
+      <mat-icon>assignment_ind</mat-icon> USUARIOS
+    </a>
+
 
     <!-- <a mat-list-item routerLink="/servi" (click)="onSidenavClose()">
       <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Services</span>
   </a>  -->
-
+<!--
     <a mat-list-item  routerLinkActive="list-item-active" routerLink="createperson">
 
-     <mat-icon>edit</mat-icon> Create Person </a>
+      <mat-icon>edit</mat-icon> Create Person </a>
     <a mat-list-item routerLinkActive="list-item-active" routerLink="modifyperson">
       <mat-icon>edit</mat-icon> Modify Person </a>
       <a mat-list-item routerLinkActive="list-item-active" routerLink="modifyusers">
-        <mat-icon>edit</mat-icon> Modify Users </a>
+        <mat-icon>edit</mat-icon> Modify Users </a> -->
 </mat-nav-list>
