--- a/src/app/websites/login/login.component.html
+++ b/src/app/websites/login/login.component.html
@@ -1,48 +1,57 @@
+<!-- <div class="container">
+  <div class="row">
+
+
+  <div  class="col-lg-6 col-xl-6 mx-auto">
+    <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
+      <div class="card-img-left d-none d-md-flex">
+
+      </div>
+        <div lass="card-body p-4 p-sm-5">
+          <h5 class="card-title text-center mb-5 fw-light fs-5">INICIO SESION</h5>
+
+
+
+                <mat-form-field appearance="outline">
+                  <mat-label class="label">Codigo</mat-label>
+                    <input matInput placeholder="Codigo" [(ngModel)]="loginData.userCode">
+                </mat-form-field>
+
+
+                <mat-form-field appearance="outline">
+                  <mat-label class="label">Contraseña</mat-label>
+                <input matInput placeholder="Contraseña" [(ngModel)]="loginData.password" type="password">
+            </mat-form-field>
+
+
+            <div class="d-grid mb-2">
+
+                <button mat-raised-button class="col btn btn-dark-moon btn-rounded" type="submit"  (click) = "onLogin()">Ingresar</button>
+
+            </div>
+
+
+    </div>
+    </div>
+    </div>
+  </div>
+</div> -->
 
 <mat-card class="mat-elevation-z8">
 
-  <span>LOGIN</span>
+  <span class="text">LOGIN</span>
+
+
 
   <br>
-  <mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>CODIGO USUARIO</mat-label>
       <input matInput placehoder="Codigo"[(ngModel)]="loginData.userCode" >
   </mat-form-field>
   <br>
-  <mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>CONTRASEÑA</mat-label>
       <input matInput placehoder="Contraseña"  [(ngModel)]="loginData.password"  type="password">
   </mat-form-field>
       <button mat-raised-button color="primary" (click) = "onLogin()">Iniciar Sesion</button>
 </mat-card>
-
-<!--
- <div class="login-page">
-    <div class="content px20">
-      <form class="login-form" #myForm="ngForm" (ngSubmit)="onLogin()">
-        <div class="text-center">
-          <h2 class="app-name">Bienvenido</h2>
-        </div>
-        <div fxLayout="row">
-          <div fxFlexFill>
-            <mat-form-field class="w-100">
-              <input matInput placeholder="Email" [(ngModel)]="loginData.userCode">
-            </mat-form-field>
-            <mat-form-field class="w-100">
-              <input matInput type="password" placeholder="Password"  [(ngModel)]="loginData.password" >
-            </mat-form-field>
-          </div>
-        </div>
-        <div fxLayout="row" fxLayoutAlign="space-between" fxLayout.xs="column" class="mt20 mb20">
-          <mat-checkbox color="primary" [ngStyle.xs]="{'margin-bottom.px': 10}">Remember Me</mat-checkbox>
-          <a href="javascript:void(0)">Forgot Password</a>
-        </div>
-        <div fxLayout="row">
-          <div fxFlexFill>
-            <button type="submit" mat-raised-button color="primary" class="w-100">Login</button>
-
-          </div>
-        </div>
-
-      </form>
-    </div>
-  </div> -->
-
