--- a/src/app/websites/shared/header/header.component.html
+++ b/src/app/websites/shared/header/header.component.html
@@ -14,20 +14,20 @@
     <div fxFlex fxLayout fxLayoutAlign="center" fxHide.xs>
         <ul fxLayout fxLayoutGap="15px" class="navigation-items">
             <li>
-                <a routerLink="home">Home</a>
+                <a routerLink="home">Inicio</a>
             </li>
             <li>
-                <a routerLink="servi">Services</a>
+                <a routerLink="servi">Servicios</a>
             </li>
             <li>
-              <a routerLink="work">Work Team</a>
+              <a routerLink="work">Equipo Trabajo</a>
            </li>
         </ul>
     </div>
     <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
       <ul fxLayout  class="navigation-items">
           <li>
-              <a routerLink="login">LogIn</a>
+              <a routerLink="login">Inicio Sesion</a>
           </li>
 
       </ul>
