--- a/src/app/websites/shared/sidenav-list/sidenav-list.component.html
+++ b/src/app/websites/shared/sidenav-list/sidenav-list.component.html
@@ -1,14 +1,14 @@
 <mat-nav-list>
     <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
-        <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
+        <mat-icon>home</mat-icon> <span class="nav-caption">Inicio</span>
     </a>
     <a mat-list-item routerLink="/servi" (click)="onSidenavClose()">
-        <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Services</span>
+        <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Servicio</span>
     </a>
     <a mat-list-item routerLink="/work" (click)="onSidenavClose()">
-        <mat-icon>account_balance</mat-icon><span class="nav-caption">Work Team </span>
+        <mat-icon>account_balance</mat-icon><span class="nav-caption">Equipo Trabajo </span>
     </a>
     <a mat-list-item routerLink="/login-user" (click)="onSidenavClose()">
-        <mat-icon>account_circle</mat-icon><span class="nav-caption">LogIn </span>
+        <mat-icon>account_circle</mat-icon><span class="nav-caption">Inicio Session </span>
     </a>
   </mat-nav-list>
